# P4_priv

./: README.md  stack.yaml
switch/: p4-switch.cabal
switch/src/Language/P4/: Arch.hs  Interp.hs  TH.hs  Types.hs  Util.hs  UtilTest.hs
switch/test/: Examples.hs  testArch.hs  testInterp.hs
