name:                p4-switch
version:             0.1.0.0
synopsis:            Architectural modeling of P4-programmable switches.
description:         Provides behavioral and architectural implementations of
                     network switches, which are programmable using the P4 language.
license:             BSD3
license-file:        LICENSE
author:              David Banas
maintainer:          capn.freako@gmail.com
copyright:           2017 David Banas
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/capn-freako/P4

library
  hs-source-dirs:      src
  exposed-modules:     Language.P4.Interp
                       Language.P4.Arch
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , containers
  default-language:    Haskell2010

test-suite switch-examples
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Examples.hs
  build-depends:       base
                     , mtl
                     , containers
  default-language:    Haskell2010

